Add basic page structures and text

--- a/src/app/instruction/instruction.component.html
+++ b/src/app/instruction/instruction.component.html
@@ -1,1 +1,11 @@
-<p>instruction works!</p>
+<section>
+    <h1 class="heading-xl main-heading">Professional Instruction</h1>
+
+    <p>
+        We offer private 1:1 Instruction, Group Instruction, Youth training in addition to a variety of Clinics
+        beginning with Intro to Pickleball!
+        <br>
+        <br>
+        To schedule lessons reach out to David & Bailey at <a href="mailto:lanningpickleball@gmail.com" target="_blank">{{"lanningpickleball@gmail.com"}}</a>
+    </p>
+</section>
