--- a/src/app/leagues/leagues-and-tourneys.component.html
+++ b/src/app/leagues/leagues-and-tourneys.component.html
@@ -1,1 +1,6 @@
-<p>leagues works!</p>
+<section>
+    <h1 class="heading-xl main-heading">Leagues & Tournaments</h1>
+    <h2 class="heading-lg">Leagues</h2>
+    <br>
+    <h2 class="heading-lg">Tournaments</h2>
+</section>
