--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,5 +36,17 @@ $dinks_pickleball_dsm-theme: mat.define-theme((
 // @include mat.color-variants-backwards-compatibility($dinks_pickleball_dsm-theme);
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
+html, body { height: 100% }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.main-heading{
+  text-align: center;
+}
+
+.heading-xl{
+  font-size: 3rem;
+}
+
+.heading-lg{
+  font-size: 2rem;
+}
