--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,18 +1,41 @@
-.nav-button{
-    color: black;
+.nav-button {
+    color: #062e51;
     font-size: 1.2rem;
     text-decoration: none;
 
     margin-left: 15px;
     margin-right: 15px;
 
-    &:hover{
+    &:hover {
         cursor: pointer;
         text-decoration: underline;
     }
 }
 
-.active-nav-button{
-    color: red;
+.active-nav-button {
+    color: #c01422;
+    font-weight: 500;
     text-decoration: underline;
+}
+
+.footer {
+    background-color: #062e51;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    padding: 2rem;
+
+    .footer-button {
+        color: white;
+        font-size: 1.2rem;
+        text-decoration: underline;
+    
+        margin-left: 15px;
+        margin-right: 15px;
+    
+        &:hover {
+            cursor: pointer;
+            text-decoration: none;
+        }
+    }
 }
