--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,34 +1,33 @@
 <section>
     <h1 class="heading-xl main-heading">Frequently Asked Questions</h1>
-    <p class="main-heading">Please reach us at <a href="MailTo:info@dinkspickleballdsm.com">{{'info@dinkspickleballdsm.com'}}</a> if you cannot find an answer to your question.</p>
+    <p class="main-heading">Please reach us at <a
+            href="MailTo:info@dinkspickleballdsm.com">{{'info@dinkspickleballdsm.com'}}</a> if you cannot find an answer
+        to your question.</p>
 
-    <mat-expansion-panel hideToggle class="mat-elevation-z0">
-        <mat-expansion-panel-header>
-            <mat-panel-title> Is this Heaven? </mat-panel-title>
-        </mat-expansion-panel-header>
+    <div hideToggle class="mat-elevation-z0">
+        <strong> Is this Heaven? </strong>
         <p>No, it's indoor pickleball on 13 proper dedicated courts in Iowa!</p>
-    </mat-expansion-panel>
-    <mat-divider></mat-divider>
-    <mat-expansion-panel hideToggle class="mat-elevation-z0">
-        <mat-expansion-panel-header>
-            <mat-panel-title> When can I start playing? </mat-panel-title>
-        </mat-expansion-panel-header>
+    </div>
+    <div hideToggle class="mat-elevation-z0">
+        <strong> When can I start playing? </strong>
         <p>
             We are working extremely hard to get open ASAP so our members have a place to play when the Iowa weather
             turns south. As you can manage, there is A LOT that goes into transforming a 72K sq ft facility (and
             unfortunately a few things we couldn't imagine) We are striving for a late October court launch but of
-            course there are things outside our control. We plan to keep our members and prospective members up to date
+            course there are things outside our control. We plan to keep our members and prospective members up to
+            date
             with both our progress and our opening date as we get closer!
         </p>
-    </mat-expansion-panel>
-    <mat-divider></mat-divider>
-    <mat-expansion-panel hideToggle class="mat-elevation-z0">
-        <mat-expansion-panel-header>
-            <mat-panel-title> Do I need to be a member to play at Dinks? </mat-panel-title>
-        </mat-expansion-panel-header>
+
+    </div>
+
+    <div hideToggle class="mat-elevation-z0">
+        <strong> Do I need to be a member to play at Dinks? </strong>
         <p>
-            Yes, we are a member facility. Members can both sign up for open play or book courts in advance and will
-            receive a unique door code to enter our facility for each playing session. This is both for safety and
+            Yes, we are a member facility. Members can both sign up for open play or book courts in advance and
+            will
+            receive a unique door code to enter our facility for each playing session. This is both for safety
+            and
             liability.
             <br>
             <br>
@@ -36,17 +35,21 @@
             accommodate varying player's budgets and playing frequency/needs.
             <br>
             <br>
-            Members may bring a guest(s) with them to their reservation, but guests must pay a daily guest fee of $10.
+            Members may bring a guest(s) with them to their reservation, but guests must pay a daily guest fee
+            of $10.
         </p>
-    </mat-expansion-panel>
-    <mat-divider></mat-divider>
-    <mat-expansion-panel hideToggle class="mat-elevation-z0">
-        <mat-expansion-panel-header>
-            <mat-panel-title> Will there be Open Play? </mat-panel-title>
-        </mat-expansion-panel-header>
+
+    </div>
+
+    <div hideToggle class="mat-elevation-z0">
+
+        <strong> Will there be Open Play? </strong>
+
         <p>
-            Yes! We will be adapting to member demand, but initially plan to have open play 7 days a week from 6am-10am
-            on dedicated courts. There will also be courts available for reservations during these time slots as well.
+            Yes! We will be adapting to member demand, but initially plan to have open play 7 days a week
+            from 6am-10am
+            on dedicated courts. There will also be courts available for reservations during these time
+            slots as well.
             <br>
             <br>
             VIP - $7/time
@@ -55,62 +58,77 @@
             <br>
             Limited - $9/time
         </p>
-    </mat-expansion-panel>
-    <mat-divider></mat-divider>
-    <mat-expansion-panel hideToggle class="mat-elevation-z0">
-        <mat-expansion-panel-header>
-            <mat-panel-title> Can I sign up to be a member now before Dinks Opens? </mat-panel-title>
-        </mat-expansion-panel-header>
+
+    </div>
+
+    <div hideToggle class="mat-elevation-z0">
+
+        <strong> Can I sign up to be a member now before Dinks Opens? </strong>
+
         <p>
-            Yes! Membership sign up is now live! Follow our instructions on our home page by either going to the court
+            Yes! Membership sign up is now live! Follow our instructions on our home page by either
+            going to the court
             reserve website or downloading the court reserve app and selecting Dinks Pickleball.
             <br>
             <br>
-            By joining now before we open our doors not only do you help support our mission of providing the DSM
+            By joining now before we open our doors not only do you help support our mission of
+            providing the DSM
             pickleball community indoor dedicated courts but you also get:
         </p>
         <ul>
             <li>
-                the remainder of 2023 included as part of your annual membership - renewal date will be 1/1/2025
+                the remainder of 2023 included as part of your annual membership - renewal date will be
+                1/1/2025
             </li>
             <li>VIP members get added perk of a free 2 hour rental (up to $56 value)</li>
             <li>waived activation fee</li>
         </ul>
-    </mat-expansion-panel>
-    <mat-divider></mat-divider>
-    <mat-expansion-panel hideToggle class="mat-elevation-z0">
-        <mat-expansion-panel-header>
-            <mat-panel-title> What else will be available outside of court rentals? </mat-panel-title>
-        </mat-expansion-panel-header>
+
+    </div>
+
+    <div hideToggle class="mat-elevation-z0">
+
+        <strong> What else will be available outside of court rentals? </strong>
+
         <p>
-            While we are truly a dedicated pickleball facility, there will be a lot going on at Dinks! Outside of
-            reserving courts to battle it out with your friends or signing up for open play to make new friends, Dinks
-            will offer a variety of Pickleball instruction from Intro to Pickleball, beginner, intermediate and advanced
+            While we are truly a dedicated pickleball facility, there will be a lot going on at
+            Dinks! Outside of
+            reserving courts to battle it out with your friends or signing up for open play to make
+            new friends, Dinks
+            will offer a variety of Pickleball instruction from Intro to Pickleball, beginner,
+            intermediate and advanced
             clinics and lessons. We also plan to offer leagues and fun events!
             <br>
             <br>
-            With 13 courts we will also be able to provide ongoing Tournaments year round and already have several
+            With 13 courts we will also be able to provide ongoing Tournaments year round and
+            already have several
             planned and in the works!
             <br>
             <br>
-            Outside of pickleball we want our members to stay, relax, socialize and have fun. We have a lot of space for
+            Outside of pickleball we want our members to stay, relax, socialize and have fun. We
+            have a lot of space for
             our members to enjoy, bags, ping pong, yard games are more!
         </p>
-    </mat-expansion-panel>
-    <mat-divider></mat-divider>
-    <mat-expansion-panel hideToggle class="mat-elevation-z0">
-        <mat-expansion-panel-header>
-            <mat-panel-title> Are there Sponsorship opportunities to both support Dinks and Promote my Business?
-            </mat-panel-title>
-        </mat-expansion-panel-header>
+
+    </div>
+
+    <div hideToggle class="mat-elevation-z0">
+
+        <strong> Are there Sponsorship opportunities to both support Dinks and Promote my
+            Business?
+        </strong>
+
         <p>
-            Yes! This is a community and it has been our experience that pickleball players make fast friends and
-            support one another. We have a variety of sponsorship opportunities that help us deliver on our mission to
-            the pickleball community while at the same time providing you an opportunity to connect your business with
+            Yes! This is a community and it has been our experience that pickleball players make
+            fast friends and
+            support one another. We have a variety of sponsorship opportunities that help us
+            deliver on our mission to
+            the pickleball community while at the same time providing you an opportunity to
+            connect your business with
             the broader community.
             <br>
             <br>
             Please reach out and lets discuss in further detail!
         </p>
-    </mat-expansion-panel>
+    </div>
 </section>
