Use tailwind styles

--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,6 +1,6 @@
 <section>
-    <h1 class="heading-xl main-heading">Frequently Asked Questions</h1>
-    <p class="main-heading">Please reach us at <a
+    <h1 class="text-4xl text-center">Frequently Asked Questions</h1>
+    <p class="text-center">Please reach us at <a
             href="MailTo:info@dinkspickleballdsm.com">{{'info@dinkspickleballdsm.com'}}</a> if you cannot find an answer
         to your question.</p>
 
