--- a/src/app/leagues/leagues-and-tourneys.component.html
+++ b/src/app/leagues/leagues-and-tourneys.component.html
@@ -1,6 +1,6 @@
 <section>
-    <h1 class="heading-xl main-heading">Leagues & Tournaments</h1>
-    <h2 class="heading-lg">Leagues</h2>
+    <h1 class="text-4xl text-center">Leagues & Tournaments</h1>
+    <h2 class="text-3xl">Leagues</h2>
     <br>
-    <h2 class="heading-lg">Tournaments</h2>
+    <h2 class="text-3xl">Tournaments</h2>
 </section>
