--- a/src/app/memberships/memberships.component.html
+++ b/src/app/memberships/memberships.component.html
@@ -1,8 +1,8 @@
 <section>
-    <h1 class="heading-xl main-heading">Rates & Memberships</h1>
-    <h2 class="heading-lg">Rates</h2>
+    <h1 class="text-4xl text-center">Rates & Memberships</h1>
+    <h2 class="text-3xl">Rates</h2>
     <br>
-    <h2 class="heading-lg">Memberships <span style="font-weight: 100;">(Annual)</span></h2>
+    <h2 class="text-3xl">Memberships <span style="font-weight: 100;">(Annual)</span></h2>
     <p style="width: 50%; text-align: center; ">
         Introductory Membership Rates | 12 month period will begin Jan 1 2024 with membership benefits beginning when
         Dinks opens (est Oct 2023) $25 activation fee waived with memberships purchased before Grand Opening
