--- a/src/app/instruction/instruction.component.html
+++ b/src/app/instruction/instruction.component.html
@@ -1,5 +1,5 @@
 <section>
-    <h1 class="heading-xl main-heading">Professional Instruction</h1>
+    <h1 class="text-4xl text-center">Professional Instruction</h1>
 
     <p>
         We offer private 1:1 Instruction, Group Instruction, Youth training in addition to a variety of Clinics
