faq page mocked out

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,5 @@
 <section>
-    <h1 class="text-4xl text-center">About us</h1>
+    <h1 class="text-5xl text-center mb-5">About us</h1>
 
     <p>
         We are a local, family owned, dedicated indoor pickleball venue. In fact, we are the largest dedicated
@@ -16,7 +16,7 @@
         to Pickleball clinics or help take your game to the next level!
     </p>
 
-    <h2 class="text-3xl">The Lanning Family</h2>
+    <h2 class="text-4xl">The Lanning Family</h2>
     <p>
         David and Bailey started playing pickleball about 5 years ago after Bailey’s parents, Kirk and Beth Meints
         introduced them to the sport. Like most, once we started playing we quickly became addicted. We even took a
@@ -51,7 +51,7 @@
         We sincerely appreciate your support!
         David Lanning Bailey Saal-Lanning
     </p>
-    <h2 class="text-3xl">The Douglass Family</h2>
+    <h2 class="text-4xl">The Douglass Family</h2>
     <p>
         Bill and Deb grew up in Mt Vernon but have lived at Lake Panorama for the past 23yrs.
         <br>
