--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,7 @@
+nav {
+    position: fixed;
+}
+
 .nav-button {
     color: #062e51;
     font-size: 1.2rem;
@@ -21,7 +25,7 @@
 .footer {
     background-color: #062e51;
     width: 100%;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     padding: 2rem;
 
@@ -29,10 +33,10 @@
         color: white;
         font-size: 1.2rem;
         text-decoration: underline;
-    
+
         margin-left: 15px;
         margin-right: 15px;
-    
+
         &:hover {
             cursor: pointer;
             text-decoration: none;
