--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,134 +1,34 @@
-<section>
-    <h1 class="text-4xl text-center">Frequently Asked Questions</h1>
-    <p class="text-center">Please reach us at <a
-            href="MailTo:info@dinkspickleballdsm.com">{{'info@dinkspickleballdsm.com'}}</a> if you cannot find an answer
-        to your question.</p>
+<section class="container px-96">
+    <h1 class="text-5xl text-center mb-5 mb-5">Frequently Asked Questions</h1>
+    <p class="text-center mb-10">
+        Please reach us at
+        <a href="mailto:info@dinkspickleballdsm.com">{{
+            'info@dinkspickleballdsm.com'
+            }}</a>
+        if you cannot find an answer to your question.
+    </p>
 
-    <div hideToggle class="mat-elevation-z0">
-        <strong> Is this Heaven? </strong>
-        <p>No, it's indoor pickleball on 13 proper dedicated courts in Iowa!</p>
-    </div>
-    <div hideToggle class="mat-elevation-z0">
-        <strong> When can I start playing? </strong>
-        <p>
-            We are working extremely hard to get open ASAP so our members have a place to play when the Iowa weather
-            turns south. As you can manage, there is A LOT that goes into transforming a 72K sq ft facility (and
-            unfortunately a few things we couldn't imagine) We are striving for a late October court launch but of
-            course there are things outside our control. We plan to keep our members and prospective members up to
-            date
-            with both our progress and our opening date as we get closer!
-        </p>
-
-    </div>
-
-    <div hideToggle class="mat-elevation-z0">
-        <strong> Do I need to be a member to play at Dinks? </strong>
-        <p>
-            Yes, we are a member facility. Members can both sign up for open play or book courts in advance and
-            will
-            receive a unique door code to enter our facility for each playing session. This is both for safety
-            and
-            liability.
-            <br>
-            <br>
-            All players have different needs and playing habits so we offer 3 different membership options to
-            accommodate varying player's budgets and playing frequency/needs.
-            <br>
-            <br>
-            Members may bring a guest(s) with them to their reservation, but guests must pay a daily guest fee
-            of $10.
-        </p>
-
-    </div>
-
-    <div hideToggle class="mat-elevation-z0">
-
-        <strong> Will there be Open Play? </strong>
-
-        <p>
-            Yes! We will be adapting to member demand, but initially plan to have open play 7 days a week
-            from 6am-10am
-            on dedicated courts. There will also be courts available for reservations during these time
-            slots as well.
-            <br>
-            <br>
-            VIP - $7/time
-            <br>
-            Gold - $8/time
-            <br>
-            Limited - $9/time
-        </p>
-
-    </div>
-
-    <div hideToggle class="mat-elevation-z0">
-
-        <strong> Can I sign up to be a member now before Dinks Opens? </strong>
-
-        <p>
-            Yes! Membership sign up is now live! Follow our instructions on our home page by either
-            going to the court
-            reserve website or downloading the court reserve app and selecting Dinks Pickleball.
-            <br>
-            <br>
-            By joining now before we open our doors not only do you help support our mission of
-            providing the DSM
-            pickleball community indoor dedicated courts but you also get:
-        </p>
-        <ul>
-            <li>
-                the remainder of 2023 included as part of your annual membership - renewal date will be
-                1/1/2025
-            </li>
-            <li>VIP members get added perk of a free 2 hour rental (up to $56 value)</li>
-            <li>waived activation fee</li>
+    @for(faq of faqs; track faq; let i = $index){
+    <article class="p-4 border-t last:border-b border-black hover:cursor-pointer" (click)="toggleShown(i)">
+        <div>
+            <strong class="p-2"> {{faq.question}} </strong>
+        </div>
+        @if(shown.includes(i)){
+        @for(answer of faq.answers; track answer; ){
+        <!-- Is a string -->
+        @if(isString(answer)){
+        <p class="p-2">{{answer}}</p>
+        }
+        <!-- Is an array -->
+        @else {
+        <ul class="p-2">
+            @for(item of answer; track item){
+            <li>{{item}}</li>
+            }
         </ul>
-
-    </div>
-
-    <div hideToggle class="mat-elevation-z0">
-
-        <strong> What else will be available outside of court rentals? </strong>
-
-        <p>
-            While we are truly a dedicated pickleball facility, there will be a lot going on at
-            Dinks! Outside of
-            reserving courts to battle it out with your friends or signing up for open play to make
-            new friends, Dinks
-            will offer a variety of Pickleball instruction from Intro to Pickleball, beginner,
-            intermediate and advanced
-            clinics and lessons. We also plan to offer leagues and fun events!
-            <br>
-            <br>
-            With 13 courts we will also be able to provide ongoing Tournaments year round and
-            already have several
-            planned and in the works!
-            <br>
-            <br>
-            Outside of pickleball we want our members to stay, relax, socialize and have fun. We
-            have a lot of space for
-            our members to enjoy, bags, ping pong, yard games are more!
-        </p>
-
-    </div>
-
-    <div hideToggle class="mat-elevation-z0">
-
-        <strong> Are there Sponsorship opportunities to both support Dinks and Promote my
-            Business?
-        </strong>
-
-        <p>
-            Yes! This is a community and it has been our experience that pickleball players make
-            fast friends and
-            support one another. We have a variety of sponsorship opportunities that help us
-            deliver on our mission to
-            the pickleball community while at the same time providing you an opportunity to
-            connect your business with
-            the broader community.
-            <br>
-            <br>
-            Please reach out and lets discuss in further detail!
-        </p>
-    </div>
+        }
+        }
+        }
+    </article>
+    }
 </section>
