--- a/src/app/instruction/instruction.component.html
+++ b/src/app/instruction/instruction.component.html
@@ -1,11 +1,12 @@
 <section>
-    <h1 class="text-4xl text-center">Professional Instruction</h1>
+    <h1 class="text-5xl text-center mb-5">Professional Instruction</h1>
 
     <p>
         We offer private 1:1 Instruction, Group Instruction, Youth training in addition to a variety of Clinics
         beginning with Intro to Pickleball!
         <br>
         <br>
-        To schedule lessons reach out to David & Bailey at <a href="mailto:lanningpickleball@gmail.com" target="_blank">{{"lanningpickleball@gmail.com"}}</a>
+        To schedule lessons reach out to David & Bailey at <a
+            href="mailto:lanningpickleball@gmail.com">{{"lanningpickleball@gmail.com"}}</a>
     </p>
 </section>
