--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.bg-dinks-blue {
+    background-color: #062e51;
+}
+
+.bg-dinks-red {
+    background-color: #c01422;
+}
+
+.hover\:bg-dinks-red-dark:hover {
+    background-color: #780e17;
+}
