some stuff on hours and memberships

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<section>
+<main>
     <h1 class="text-5xl text-center mb-5">About us</h1>
 
     <p>
@@ -84,4 +84,4 @@
         <br>
         We are excited to bring Dinks to life and appreciate the incredible support we have received so far.
     </p>
-</section>
+</main>
