--- a/src/app/instruction/instruction.component.html
+++ b/src/app/instruction/instruction.component.html
@@ -1,4 +1,4 @@
-<section>
+<main>
     <h1 class="text-5xl text-center mb-5">Professional Instruction</h1>
 
     <p>
@@ -9,4 +9,4 @@
         To schedule lessons reach out to David & Bailey at <a
             href="mailto:lanningpickleball@gmail.com">{{"lanningpickleball@gmail.com"}}</a>
     </p>
-</section>
+</main>
