--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
       <a class="nav-button" [routerLink]="['/home']" routerLinkActive="active-nav-button"
         ariaCurrentWhenActive="page">Home</a>
       <a class="nav-button" [routerLink]="['/memberships']" routerLinkActive="active-nav-button"
-        ariaCurrentWhenActive="page">Rates/Memberships</a>
+        ariaCurrentWhenActive="page">Hours/Rates/Memberships</a>
       <a class="nav-button" [routerLink]="['/leagues-tournaments']" routerLinkActive="active-nav-button"
         ariaCurrentWhenActive="page">Leagues/Tournaments</a>
       <a class="nav-button" [routerLink]="['/instruction']" routerLinkActive="active-nav-button"
@@ -23,12 +23,12 @@
   </nav>
 </header>
 
-<main class="container mx-auto px-4 py-24 mb-10">
+<main class="container mx-auto px-4 py-24">
   <router-outlet></router-outlet>
 </main>
 
 <footer>
-  <div class="footer">
+  <div class="footer p-5">
     <a href="https://www.facebook.com/groups/380792678025831/" target="_blank">
       <img src="facebook.png">
     </a>
