--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,4 +1,4 @@
-<section class="container px-96">
+<main class="container px-96">
     <h1 class="text-5xl text-center mb-5 mb-5">Frequently Asked Questions</h1>
     <p class="text-center mb-10">
         Please reach us at
@@ -31,4 +31,4 @@
         }
     </article>
     }
-</section>
+</main>
