--- a/src/app/memberships/memberships.component.scss
+++ b/src/app/memberships/memberships.component.scss
@@ -1,14 +1,3 @@
-ul {
-    list-style: none;
-}
-
-ul li:before {
-    content: '✓';
-    color: #062e51;
-    margin-right: 1rem;
-}
-
-.membership-card {
-    width: 100%;
-    height: 175px;
+td {
+    text-align: center;
 }
