add prices to memberships

--- a/src/app/memberships/memberships.component.html
+++ b/src/app/memberships/memberships.component.html
@@ -39,11 +39,12 @@
             Dinks opens (est Oct 2023) $25 activation fee waived with memberships purchased before Grand Opening
         </p>
     </section>
-    <article class="grid grid-cols-3">
-        <table class="border-separate border-spacing-2 col-span-2">
+    <article class="grid grid-cols-4">
+        <table class="border-separate border-spacing-2 col-span-3">
             <thead>
                 <tr>
                     <th class="border border-zinc-300 bg-zinc-300 p-5">Membership tier</th>
+                    <th class="border border-zinc-300 bg-zinc-300 p-5">Price/year</th>
                     <th class="border border-zinc-300 bg-zinc-300 p-5">Court booking</th>
                     <th class="border border-zinc-300 bg-zinc-300 p-5">Price/session</th>
                     <th class="border border-zinc-300 bg-zinc-300 p-5">Early tournament and special even access</th>
@@ -53,6 +54,7 @@
             <tbody>
                 <tr>
                     <td class="border-2 border-slate-300 p-5">Limited</td>
+                    <td class="border-2 border-slate-300 p-5">$45</td>
                     <td class="border-2 border-slate-300 p-5">5 days in advance</td>
                     <td class="border-2 border-slate-300 p-5">$9</td>
                     <td class="border-2 border-slate-300 p-3 text-xl text-red-600">✕</td>
@@ -62,6 +64,7 @@
             <tbody>
                 <tr>
                     <td class="border-2 border-amber-300 p-5">Standard</td>
+                    <td class="border-2 border-amber-300 p-5">$125</td>
                     <td class="border-2 border-amber-300 p-5">2 weeks in advance</td>
                     <td class="border-2 border-amber-300 p-5">$8</td>
                     <td class="border-2 border-amber-300 p-3 text-xl text-green-600">✓</td>
@@ -71,13 +74,14 @@
             <tbody>
                 <tr>
                     <td class="border-2 border-black p-5">VIP</td>
+                    <td class="border-2 border-black p-5">$195</td>
                     <td class="border-2 border-black p-5">6 months in advance</td>
                     <td class="border-2 border-black p-5">$7</td>
                     <td class="border-2 border-black p-3 text-xl text-green-600">✓</td>
                 </tr>
             </tbody>
         </table>
-        <div class="col-span-1 m-2 border-4 border-zinc-300 p-24">
+        <div class="col-span-1 m-2 border-4 border-zinc-300 p-16">
             <span>
                 All membership tiers come with personalized door access upon signing up for open play or booking a
                 court
