membership page done

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,5 @@
 <main>
-    <h1 class="text-5xl text-center mb-5">About us</h1>
+    <h1 class="text-5xl text-center my-6">About us</h1>
 
     <p>
         We are a local, family owned, dedicated indoor pickleball venue. In fact, we are the largest dedicated
