--- a/src/app/instruction/instruction.component.html
+++ b/src/app/instruction/instruction.component.html
@@ -1,5 +1,5 @@
 <main>
-    <h1 class="text-5xl text-center mb-5">Professional Instruction</h1>
+    <h1 class="text-5xl text-center my-6">Professional Instruction</h1>
 
     <p>
         We offer private 1:1 Instruction, Group Instruction, Youth training in addition to a variety of Clinics
