--- a/src/app/leagues/leagues-and-tourneys.component.html
+++ b/src/app/leagues/leagues-and-tourneys.component.html
@@ -1,5 +1,5 @@
 <main>
-    <h1 class="text-5xl text-center mb-5">Leagues & Tournaments</h1>
+    <h1 class="text-5xl text-center my-6">Leagues & Tournaments</h1>
     <h2 class="text-4xl">Leagues</h2>
     <br>
     <h2 class="text-4xl">Tournaments</h2>
