--- a/src/app/memberships/memberships.component.html
+++ b/src/app/memberships/memberships.component.html
@@ -1,91 +1,160 @@
 <main>
-    <h1 class="text-5xl text-center mb-5">Rates & Memberships</h1>
-    <!-- hours/rates -->
+    <h1 class="text-5xl text-center my-6">Rates & Memberships</h1>
+    <!-- Hours/rates -->
     <h2 class="text-4xl mb-5">Hours/Rates</h2>
+    <!-- Open play -->
+    <h3 class="text-2xl mb-5 text-center">Open play</h3>
+    <article class="grid grid-cols-2 mb-10">
+        <div class="mx-1 rounded rounded border-2 border-neutral-400 p-5 text-center">
+            <strong class="text-sky-600">Monday-Friday</strong>
+            <span>
+                <span class="flex justify-center">
+                    <p class="text-3xl">$7/$8/$9</p>
+                    <p class="mt-3 ml-1">/hour</p>
+                </span>
+                <p class="text-xl">determined by membership</p>
+            </span>
+            <p class="text-center mt-2">8AM-11AM</p>
+        </div>
+        <div class="mx-1 rounded rounded border-2 border-neutral-400 p-5 text-center">
+            <strong class="text-sky-600">Friday, Saturday, Sunday</strong>
+            <span>
+                <span class="flex justify-center">
+                    <p class="text-3xl">$7/$8/$9</p>
+                    <p class="mt-3 ml-1">/hour</p>
+                </span>
+                <p class="text-xl">determined by membership</p>
+            </span>
+            <p class="text-center mt-2">8PM-11PM</p>
+        </div>
+    </article>
+    <!-- Court reservations -->
+    <h3 class="text-2xl mb-5 text-center">Court reservations</h3>
     <article class="grid grid-cols-3 mb-10">
-        <div class="mx-1 border border-zinc-300 p-5 text-center">
-            <strong class="text-sky-600">Weekdays</strong>
+        <div class="mx-1 rounded rounded border-2 border-neutral-400 p-5 text-center">
+            <strong class="text-sky-600">Monday-Friday</strong>
             <span style="display: flex; justify-content: center; ">
                 <p class="text-3xl">$16</p>
-                <p>/hour</p>
+                <p class="mt-3 ml-1">/hour</p>
             </span>
             <p class="text-center mt-2">6AM-4PM</p>
         </div>
-        <div class="mx-1 border border-zinc-300 p-5 text-center">
-            <strong class="text-sky-600">Weekdays</strong>
+        <div class="mx-1 rounded rounded border-2 border-neutral-400 p-5 text-center">
+            <strong class="text-sky-600">Monday-Friday (Evenings)</strong>
             <span style="display: flex; justify-content: center; ">
                 <p class="text-3xl">$22</p>
-                <p>/hour</p>
+                <p class="mt-3 ml-1">/hour</p>
             </span>
             <p class="text-center mt-2">4PM-12AM</p>
         </div>
-        <div class="mx-1 border border-zinc-300 p-5 text-center">
-            <strong class="text-sky-600">Weekends (Sat/Sun)</strong>
+        <div class="mx-1 rounded rounded border-2 border-neutral-400 p-5 text-center">
+            <strong class="text-sky-600">Saturday/Sunday</strong>
             <span style="display: flex; justify-content: center; ">
                 <p class="text-3xl">$28</p>
-                <p>/hour</p>
+                <p class="mt-3 ml-1">/hour</p>
             </span>
-            <p class="text-center mt-2">8AM-12AM</p>
+            <p class="text-center mt-2">All day</p>
         </div>
     </article>
 
     <!-- memberships -->
-    <h2 class="text-4xl mb-5">Memberships <span style="font-weight: 100;">(Annual)</span></h2>
-    <section class="m-2 text-center border-2 border-sky-600 bg-sky-50 px-28 p-2">
-        <strong>Introductory Membership Rates</strong>
-        <p class="px-24">
+    <h2 class="text-4xl mb-5">Annual Memberships</h2>
+    <!-- <section class="m-2 text-center rounded border-2 border-sky-600 bg-sky-50 px-28 p-2">
+        <strong class="text-black">Introductory Membership Rates</strong>
+        <p class="px-24 text-black">
             12 month period will begin Jan 1 2024 with membership benefits beginning
             when
             Dinks opens (est Oct 2023) $25 activation fee waived with memberships purchased before Grand Opening
         </p>
-    </section>
+    </section> -->
     <article class="grid grid-cols-4">
         <table class="border-separate border-spacing-2 col-span-3">
             <thead>
                 <tr>
-                    <th class="border border-zinc-300 bg-zinc-300 p-5">Membership tier</th>
-                    <th class="border border-zinc-300 bg-zinc-300 p-5">Price/year</th>
-                    <th class="border border-zinc-300 bg-zinc-300 p-5">Court booking</th>
-                    <th class="border border-zinc-300 bg-zinc-300 p-5">Price/session</th>
-                    <th class="border border-zinc-300 bg-zinc-300 p-5">Early tournament and special even access</th>
+                    <th class="rounded border border-gray-600 bg-gray-800 text-white p-5">Membership tier</th>
+                    <th class="rounded border border-gray-600 bg-gray-800 text-white p-5">Price/year</th>
+                    <th class="rounded border border-gray-600 bg-gray-800 text-white p-5">Open play/hour</th>
+                    <th class="rounded border border-gray-600 bg-gray-800 text-white p-5">Court booking</th>
+                    <th class="rounded border border-gray-600 bg-gray-800 text-white p-5">
+                        Early tournament and special event access
+                    </th>
                 </tr>
             </thead>
             <!-- Limited -->
             <tbody>
                 <tr>
-                    <td class="border-2 border-slate-300 p-5">Limited</td>
-                    <td class="border-2 border-slate-300 p-5">$45</td>
-                    <td class="border-2 border-slate-300 p-5">5 days in advance</td>
-                    <td class="border-2 border-slate-300 p-5">$9</td>
-                    <td class="border-2 border-slate-300 p-3 text-xl text-red-600">✕</td>
+                    <td class="rounded border-2 border-amber-800 p-5">Limited</td>
+                    <td class="rounded border-2 border-amber-800 p-5">$45</td>
+                    <td class="rounded border-2 border-amber-800 p-5">$9</td>
+                    <td class="rounded border-2 border-amber-800 p-5">5 days in advance</td>
+                    <td class="rounded border-2 border-amber-800 p-3 text-lg text-red-600">✘</td>
                 </tr>
             </tbody>
             <!-- Standard -->
             <tbody>
                 <tr>
-                    <td class="border-2 border-amber-300 p-5">Standard</td>
-                    <td class="border-2 border-amber-300 p-5">$125</td>
-                    <td class="border-2 border-amber-300 p-5">2 weeks in advance</td>
-                    <td class="border-2 border-amber-300 p-5">$8</td>
-                    <td class="border-2 border-amber-300 p-3 text-xl text-green-600">✓</td>
+                    <td class="rounded border-2 border-amber-300 p-5">Standard</td>
+                    <td class="rounded border-2 border-amber-300 p-5">$125</td>
+                    <td class="rounded border-2 border-amber-300 p-5">$8</td>
+                    <td class="rounded border-2 border-amber-300 p-5">2 weeks in advance</td>
+                    <td class="rounded border-2 border-amber-300 p-3 text-xl text-green-600">✓</td>
                 </tr>
             </tbody>
             <!-- VIP -->
             <tbody>
                 <tr>
-                    <td class="border-2 border-black p-5">VIP</td>
-                    <td class="border-2 border-black p-5">$195</td>
-                    <td class="border-2 border-black p-5">6 months in advance</td>
-                    <td class="border-2 border-black p-5">$7</td>
-                    <td class="border-2 border-black p-3 text-xl text-green-600">✓</td>
+                    <td class="rounded border-2 border-sky-500 p-5">VIP</td>
+                    <td class="rounded border-2 border-sky-500 p-5">$195</td>
+                    <td class="rounded border-2 border-sky-500 p-5">$7</td>
+                    <td class="rounded border-2 border-sky-500 p-5">6 months in advance</td>
+                    <td class="rounded border-2 border-sky-500 p-3 text-xl text-green-600">✓</td>
                 </tr>
             </tbody>
         </table>
-        <div class="col-span-1 m-2 border-4 border-zinc-300 p-16">
-            <span>
-                All membership tiers come with personalized door access upon signing up for open play or booking a
+        <div class="rounded col-span-1 m-2 px-8 py-16 bg-dinks-blue">
+            <div class=" mb-2"><strong class="text-xl">All tiers include:</strong></div>
+            <p class="mb-8">
+                Personalized door access upon signing up for open play or booking a
                 court
-            </span>
+            </p>
+            <button class="rounded bg-dinks-red" style="width: 100%;" (click)="toggleModal()">Sign me up!</button>
         </div>
     </article>
 </main>
+
+@if (showModal) {
+<article>
+    <figure class="bg-smoked-background"
+        style="width: 100vw; height: 100vh; position: fixed; top: 50%; left: 50%;  transform: translate(-50%, -50%)"
+        (click)="toggleModal()">
+    </figure>
+    <figure class="rounded bg-dinks-blue py-8 px-5"
+        style="position: fixed; top: 50%; left: 50%;  transform: translate(-50%, -50%); z-index: 1">
+        <!-- X button -->
+        <button (click)="toggleModal()" class="p-3 text-2xl" style="position: absolute; top: 0; right: 0; ">✕</button>
+
+        <!-- Content -->
+        <strong class="mb-5 ml-5 mr-20 text-3xl">How to sign up for a membership:</strong>
+        <div class="grid grid-cols-2 gap-8 p-5">
+            <div class="rounded border-2 border-gray-600 p-5">
+                <strong class="text-lg">Download the app!</strong>
+                <ul class="mt-4 ml-5 list-decimal">
+                    <li>Download Court Reserve app</li>
+                    <li>Create an account</li>
+                    <li>Search and select Dinks Pickleball from drop down menu</li>
+                    <li>Select preferred membership type</li>
+                </ul>
+            </div>
+            <div class="rounded border-2 border-gray-600 p-5">
+                <strong class="text-lg">Use the website!</strong>
+                <ul class="mt-4 ml-5 list-decimal">
+                    <li>Visit <a href="https://www.courtreserve.com" target="_blank">www.courtreserve.com</a></li>
+                    <li>Select "Login" > "Don't have an Account?" > "I'm a player"</li>
+                    <li>Search and select Dinks Pickleball</li>
+                    <li>Create account and select preferred membership type</li>
+                </ul>
+            </div>
+        </div>
+    </figure>
+</article>
+}
