--- a/src/app/become-a-sponsor/become-a-sponsor.component.html
+++ b/src/app/become-a-sponsor/become-a-sponsor.component.html
@@ -1,1 +1,63 @@
-<p>become-asponsor works!</p>
+<main>
+    <h1 class="text-5xl text-center my-16">Become a sponsor!</h1>
+    <p class="mx-24 my-16 px-48 text-center text-lg">
+        We have a variety of sponsorship opportunities that help us deliver on our mission to the pickleball community
+        while at the same time providing you an opportunity to connect your business with the broader community.
+    </p>
+    <article class="grid grid-cols-3 gap-12 h-96">
+        <figure class="rounded border-4 bg-gray-800 border-amber-800 py-8 grid-rows-10">
+            <div class="text-center mb-5">
+                <strong class="text-3xl">Dinks Gold Sponsor</strong>
+            </div>
+            <ul class="list-disc mx-12 mb-36">
+                <li>1 VIP tier annual membership</li>
+                <li>Banner hung in facility for 1 year</li>
+                <li>Logo on website for 1 year</li>
+                <li>1 VIP tier annual membership</li>
+            </ul>
+            <p class="text-4xl text-amber-800 text-center">
+                $1000/year
+            </p>
+        </figure>
+        <figure class="rounded border-4 bg-gray-800 border-amber-300 py-8">
+            <div class="flex flex-col">
+                <div class="text-center mb-5">
+                    <strong class="text-3xl">Premier Entry Sponsor</strong>
+                </div>
+                <ul class="list-disc mx-12 mb-24">
+                    <li>1 VIP tier annual membership</li>
+                    <li>Premier 4'x30' advertisement space near entrance and courts</li>
+                    <li>Mesh windscreen printing sponsor responsibility</li>
+                    <li>Logo on website for 1 year</li>
+                    <li>1 VIP tier annual membership</li>
+                </ul>
+                <p class="text-4xl text-amber-300 text-center">$2500/year</p>
+            </div>
+        </figure>
+        <figure class="rounded border-4 bg-gray-800 border-sky-500 py-8">
+            <div class="flex flex-col">
+                <div class="text-center mb-5">
+                    <strong class="text-3xl">"The Big Dill" Court Sponsor</strong>
+                </div>
+                <ul class="list-disc mx-12  mb-12">
+                    <li>2 VIP tier annual membership</li>
+                    <li>Court naming rights (seen every time courts are booked) ex. ABC Corp - Court 1</li>
+                    <li>On court branding - banner, net logo & more (sponsor responsibility)</li>
+                    <li>Banner hung in facility for 1 year</li>
+                    <li>Logo on website for 1 year</li>
+                    <li>1 VIP tier annual membership</li>
+                </ul>
+                <p class="text-4xl text-sky-500 text-center">$5000/year</p>
+            </div>
+        </figure>
+    </article>
+
+    <article>
+        <h1 class="text-5xl text-center mb-16 mt-28">Our current sponsors</h1>
+        <section class="grid grid-cols-3 gap-12 bg-white ">
+            @for(logo of sponsorLogos; track logo){
+            <img class="p-5 h-48" [src]="logo" [alt]="logo">
+            }
+        </section>
+    </article>
+</main>
